--- a/index.html
+++ b/index.html
@@ -43,13 +43,49 @@
             <i class="ri-close-line"></i>
           </div>
         </div>
-        
+
         <div class="nav__toggle" id="nav-toggle">
           <i class="ri-menu-line"></i>
         </div>
       </nav>
     </header>
-    <main class="main"></main>
+    <main class="main">
+      <section class="hero-section section" id="home">
+        <div class="hero-section__container container grid">
+          <div class="hero-section__content">
+            <img class="hero-section__img" src="./img/home-img.png" alt="JBL headphones" />
+            <h1 class="hero-section__title">
+              <span>J</span>
+              <span>B</span>
+              <span>L</span>
+            </h1>
+
+            <div class="hero-section__tooltip">
+              <img class="hero-section__tooltip-img" src="./img/tooltip-right.svg" alt="tooltip" />
+              <span class="hero-section__tooltip-text">$150</span>
+            </div>
+
+            <a href="#" class="hero-section__button button">Buy now <i class="ri-shopping-cart-2-fill"></i></a>
+
+            <div class="hero-section__socials">
+              <span class="hero-section__socials-text">Follow us</span>
+
+              <div class="hero-section__socials-links">
+                <a href="#" class="hero-section__socials-link">
+                  <i class="ri-youtube-fill"></i>
+                </a>
+                <a href="https://www.instagram.com/" class="hero-section__socials-link">
+                  <i class="ri-instagram-fill"></i>
+                </a>
+                <a href="#" class="hero-section__socials-link">
+                  <i class="ri-facebook-circle-fill"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer class="footer"></footer>
     <script src="./js/main.js"></script>
   </body>
