Add model, sponsors section

--- a/index.html
+++ b/index.html
@@ -58,11 +58,7 @@
       <section class="hero-section section" id="home">
         <div class="hero-section__container container grid">
           <div class="hero-section__content">
-            <img
-              class="hero-section__img"
-              src="./img/home-img.png"
-              alt="JBL headphones"
-            />
+            <img class="hero-section__img" src="./img/home-img.png" alt="JBL headphones" />
             <h1 class="hero-section__title">
               <span>J</span>
               <span>B</span>
@@ -70,11 +66,7 @@
             </h1>
 
             <div class="hero-section__tooltip">
-              <img
-                class="hero-section__tooltip-img"
-                src="./img/tooltip-right.svg"
-                alt="tooltip"
-              />
+              <img class="hero-section__tooltip-img" src="./img/tooltip-right.svg" alt="tooltip" />
               <span class="hero-section__tooltip-text">$150</span>
             </div>
 
@@ -105,17 +97,12 @@
           <div class="about-section__content">
             <h2 class="section__title" id="about">MORE ABOUT US</h2>
             <p class="about-section__description">
-              Enjoy award-winning JBL sound with wireless listening freedom and a sleek,
-              streamlined design with comfortable cushioned earcups that deliver premium
-              playback for the user.
+              Enjoy award-winning JBL sound with wireless listening freedom and a sleek, streamlined
+              design with comfortable cushioned earcups that deliver premium playback for the user.
             </p>
             <a class="button" href="#">Know More <i class="ri-information-fill"></i></a>
           </div>
-          <img
-            class="about-section__img"
-            src="./img/about-img.png"
-            alt="headphones image"
-          />
+          <img class="about-section__img" src="./img/about-img.png" alt="headphones image" />
         </div>
       </section>
       <section class="favorite-section section">
@@ -145,6 +132,50 @@
               </article>
             </div>
           </div>
+        </div>
+      </section>
+      <section class="model-section section">
+        <h2 class="section__title">MODEL SPECIFICATIONS</h2>
+        <div class="model-section__container container grid">
+          <div class="model-section__content">
+            <img src="./img/model-img.png" alt="model image" class="model-section__img" />
+            <div class="model-section__tooltip model-section__tooltip-1">
+              <img src="./img/tooltip-right.svg" alt="tooltip" class="model-section__tooltip-img" />
+              <span class="model-section__tooltip-text">Best Comfort</span>
+            </div>
+            <div class="model-section__tooltip model-section__tooltip-2">
+              <img src="./img/tooltip-right.svg" alt="tooltip" class="model-section__tooltip-img" />
+              <span class="model-section__tooltip-text">Easy Adjustment</span>
+            </div>
+            <div class="model-section__tooltip model-section__tooltip-3">
+              <img src="./img/tooltip-right.svg" alt="tooltip" class="model-section__tooltip-img" />
+              <span class="model-section__tooltip-text">Fast Charge</span>
+            </div>
+            <div class="model-section__tooltip model-section__tooltip-4">
+              <img src="./img/tooltip-right.svg" alt="tooltip" class="model-section__tooltip-img" />
+              <span class="model-section__tooltip-text">Custom Audio</span>
+            </div>
+          </div>
+          <a class="model-section__button button" href="#">
+            Buy Now <i class="ri-play-circle-fill"></i>
+          </a>
+        </div>
+      </section>
+      <section class="sponsors-section section">
+        <h2 class="hidden">Our sponsors</h2>
+        <div class="sponsors-section__container container grid">
+          <a href="#">
+            <img src="./img/sponsor-1.png" alt="Apple" class="sponsors-section__img" />
+          </a>
+          <a href="#">
+            <img src="./img/sponsor-2.png" alt="Spotify" class="sponsors-section__img" />
+          </a>
+          <a href="#">
+            <img src="./img/sponsor-3.png" alt="Amazon" class="sponsors-section__img" />
+          </a>
+          <a href="#">
+            <img src="./img/sponsor-4.png" alt="Youtube" class="sponsors-section__img" />
+          </a>
         </div>
       </section>
     </main>
